Smart Integration: Integrate outbound mapping into UI
- Fix issue when creating a new outbound mapping container for suggested mappings
- Fix creation of mapping virtual ref property
- Add source column into outbound mapping table
- Fix sorting and accepted-state handling in outbound mapping table